--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
       <hr>
       
       <p>Jalaj Sharma</p>
-      <p>Owen Jahannes</p>
+      <p>Owen Johannes</p>
       <p>Sandeep Sumithran</p>
       <p>Tattwamasi Ray</p>
 
