--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/Sandeep">Sandeep's Stuff</a>
+          <a class="nav-link" href="/bar_chart">Bar Chart Visualisation</a>
         </li>
 
         <li class="nav-item">
