--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index_style.css') }}">
 
 </head>
 
@@ -40,7 +40,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/Tattwamasi">Tattwamasi's Stuff</a>
+          <a class="nav-link" href="/GeoJSON">GeoJSON Visualisation</a>
         </li>
 
         <li class="nav-item">
