--- a/templates/GeoJSON.html
+++ b/templates/GeoJSON.html
@@ -69,7 +69,7 @@
   <div id="map"></div>
 
   <!-- JavaScript file -->
-  <script type="text/javascript" src="js/GeoJSON_logic.js"></script>
+  <script type="text/javascript" src="static/js/GeoJSON_logic.js"></script>
 </body>
 
 </html>
