Fixing css/js relative urls

--- a/templates/GeoJSON.html
+++ b/templates/GeoJSON.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/GeoJSON_style.css') }}">
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="css/GeoJSON_style.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/GeoJSON_style.css">
 </head>
 
 <body>
@@ -69,7 +69,7 @@
   <div id="map"></div>
 
   <!-- JavaScript file -->
-  <script type="text/javascript" src="static/js/GeoJSON_logic.js"></script>
+  <script type="text/javascript" src="../static/js/GeoJSON_logic.js"></script>
 </body>
 
 </html>
